--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,47 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.kerstavonddag {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: #333;
+  color: #f5f5f5;
+  display: flex; /* Voeg deze regel toe */
+  flex-direction: column; /* Voeg deze regel toe */
+  align-items: center; /* Voeg deze regel toe */
+  /* justify-content: center; Voeg deze regel toe */
+  height: 100vh; /* Voeg deze regel toe */
+  padding-top: 10%;
+ }
+ 
+ 
+ .kerstavonddag h1 {
+  color: #c70000;
+  font-size: 10em; /* Verhoog de grootte van de titel */
+  font-weight: bold; /* Maak de titel dikker */
+  letter-spacing: 1rem;
+  border-radius: 10px 10px yellow;
+ }
+ 
+ .kerstavonddag p {
+  font-family: 'Courier New', Courier, monospace;
+  color: #00c000;
+  font-size: 2em; /* Verhoog de grootte van de subtitel */
+  /* font-weight: bold; Maak de subtitel dikker */
+ }
+ 
+ 
+ @media (prefers-color-scheme: dark) {
+  .kerstavonddag {
+    background-color: #333;
+    color: #f5f5f5;
+  }
+ }
+ 
+ @media (prefers-color-scheme: light) {
+  .kerstavonddag {
+    background-color: #f5f5f5;
+    color: #333;
+  }
+ }
+ 
